# cadir

./: .gitignore  CMakeLists.txt  README.md  compress.hpp  config.h.in  fileSystem.hpp  main.cpp  makefile
compiletest/: has_filesystem.cpp
